Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28136

ShaderEffectItem doesn't survive GL context loss with opengl graphicssystem

    XMLWordPrintable

Details

    • 8736de61dc30d70e05ad1be4ef456e8eedbe51b8

    Description

      If the GL context changes, the shader program in ShaderEffectItem will become invalid. There is (extremely inefficient) code to detect GL context loss in Symbian platform, but not for other platforms.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chrisadams Christopher Adams
            chrisadams Christopher Adams
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes