Observe GL context loss in ShaderEffectItem

This is a backport of commit: 01928c91ff0ae76cdb02f50af3c62368e28cafb6
with change id: I8281e77f7285ea0046bdf092ab827cae3b00a6d2
from qt5/qtquick1 to qt4.

Task-number: QTBUG-28136
Change-Id: Idbeffce919d85f55df5184f8a8c9a89649687f93
Reviewed-by: Robin Burchell <robin+qt@viroteck.net>